# metis

./: .gitignore  metis.sublime-project  metis.sublime-workspace
graphs/: g1.e  g1.map  g1.p1.v  g1.udr  g1.udr.part.2  g1.v
programs/: CMakeLists.txt  gpmetis_ve.cpp  gpmetis_vlmv.cpp
